Finished graphics and difficulty settings. Need to finish win notification

--- a/Games/Minesweeper -- BETA/style.css
+++ b/Games/Minesweeper -- BETA/style.css
@@ -5,3 +5,12 @@ html, body {
 canvas {
   display: block;
 }
+
+h1 {
+	font-family: "Lucida Console";
+	margin: 5px;
+}
+
+button {
+	font-family: "Lucida Console";
+}
